--- a/sut/templates/journal.html
+++ b/sut/templates/journal.html
@@ -3,11 +3,11 @@
 {% block content %}
 <div class="journal_menu">
     <ul id="menu_p1" style="display:flex;  list-style: none; text-decoration: none;  padding-left: 15px; ">
-        <li style="margin-top:5px"><a id="active" href="{{url_for('show_journal')}}">Посещаемость</a></li>
-        <li style="margin-top:5px"><a href="{{url_for('students_works')}}">Работы </a></li>
-        <li style="margin-top:5px"><a href="{{url_for('show_statistic')}}">Статистика</a></li>
-        <li style="margin-top:5px"><a href="{{url_for('show_attestation')}}">Аттестация</a></li>
-        <li style="margin-top:5px"><a href="{{url_for('show_course_materials')}}">Содержание дисциплины</a></li>
+        <li style="margin-top:5px"><a id="active" href="{{url_for('main.show_journal')}}">Посещаемость</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('main.students_works')}}">Работы </a></li>
+        <li style="margin-top:5px"><a href="{{url_for('main.show_statistic')}}">Статистика</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('main.show_attestation')}}">Аттестация</a></li>
+        <li style="margin-top:5px"><a href="{{url_for('main.show_course_materials')}}">Содержание дисциплины</a></li>
         <li>
             <div class="form-group">
                 <select name="journal_more" class="custom-select mx-sm-1" id="journal_disp"
@@ -61,7 +61,7 @@
                     </div>
 
                     {% if data[0][index][1] == "" %}
-                    <a href="{{ url_for('insert_to_journal', day_index=headings.index(header)) }}">
+                    <a href="{{ url_for('main.insert_to_journal', day_index=headings.index(header)) }}">
                         <img src="/static/img/edit_icon_orange.svg" alt="edit icon">
                     </a>
                     {% else %}
@@ -90,7 +90,7 @@
 
                     {% if data[0][headings.index(header)][1] != "" %}
 
-                    <a href="{{ url_for('insert_to_journal', day_index=headings.index(header)) }}">
+                    <a href="{{ url_for('main.insert_to_journal', day_index=headings.index(header)) }}">
                         <img src="/static/img/edit_icon.svg" alt="edit icon">
                     </a>
                     {% endif %}
