--- a/sut/templates/selected_course_task.html
+++ b/sut/templates/selected_course_task.html
@@ -147,7 +147,7 @@
 
         <div style="width:5%;">
 
-            <a href="{{ url_for('show_course_materials') }}">
+            <a href="{{ url_for('main.show_course_materials') }}">
                 <img id="close_button" style="width:24px; height:24px; margin: 0px" src="/static/img/close_icon.svg"
                      alt="edit icon">
             </a>
