--- a/sut/templates/signup.html
+++ b/sut/templates/signup.html
@@ -17,8 +17,9 @@
     <style>
         html,
         body {
-            background: #F6941E;
+            background: #B15CCF;
         }
+
         .notification-is-danger {
             background: #EAD3F2;
             display: flex;
@@ -31,6 +32,9 @@
             border-radius: 15px;
             padding-top:15px;
             padding-bottom:15px;
+
+
+
         }
 
         .notification-is-danger a {
@@ -43,7 +47,7 @@
             width: 100%;
             height: 100%;
 
-            background-color: #F6941E;
+            background-color: #B15CCF;
         }
 
 
@@ -54,7 +58,7 @@
             display: flex;
 
             position: absolute;
-            width: 60%;
+            width: 100%;
             height: 60px;
             top: 111px;
         }
@@ -67,19 +71,23 @@
 
         .sign_up {
             width: 360px;
-            height: 350px;
+            height: 515px;
             position: absolute;
             top: 203px;
             vertical-align: middle;
             margin-left: -0.35em;
 
-            background: white;
+            background: #FFFFFF;
             border-radius: 20px;
         }
 
         .reg_title {
             position: absolute;
             height: 22px;
+            left: 5.56%;
+            right: 5.56%;
+            top: calc(50% - 22px/2 - 216.5px);
+
             font-family: Inter;
             font-style: normal;
             font-weight: bold;
@@ -87,8 +95,9 @@
             line-height: 22px;
             /* identical to box height */
 
+            margin-block-end: 37px;
+            margin-block-start: 8px;
 
-            margin-top: 35px;
             text-align: center;
 
             color: #171725;
@@ -411,7 +420,7 @@
         }
 
         .agreement-link {
-            color: #F6941E;
+            color: #B15CCF;
         }
 
         .reg-buttons {
@@ -419,7 +428,7 @@
             width: 360px;
             height: 177px;
             left: 0px;
-            top: 220px;
+            top: 337px;
         }
 
         .register {
@@ -432,7 +441,7 @@
             height: 38px;
             outline: none !important;
 
-            background-color: #F6941E;
+            background-color: #B15CCF;
             color: white;
             padding: 11px 96px;
 
@@ -459,7 +468,7 @@
             height: 38px;
             outline: none !important;
 
-            background: #FEA841;
+            background: #C585DB;
             border-radius: 10px;
             color: white;
             padding: 11px 96px;
@@ -488,7 +497,7 @@
             height: 38px;
             outline: none !important;
 
-            background: #F6941E;
+            background: #9E39C1;
             border-radius: 10px;
             color: white;
             padding: 11px 96px;
@@ -507,16 +516,104 @@
             filter: drop-shadow(0px 0px 10px rgba(177, 92, 207, 0.3));
         }
 
+        .or {
+            position: absolute;
+            height: 14px;
+            left: 46.39%;
+            right: 46.39%;
+            top: 40px;
 
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 14px;
+
+            text-align: center;
+
+            color: #92929D;
+        }
+
+        .register-google {
+            position: absolute;
+            left: 5.56%;
+            right: 5.56%;
+            top: 44.07%;
+            bottom: 34.46%;
+            width: 320px;
+            height: 38px;
+            padding-left: 46px;
+
+            background: #FFFFFF;
+            border: 1px solid #F1F1F5;
+            box-sizing: border-box;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            align-content: center;
+
+            color: #696974;
+
+        }
+
+        .register-google:hover {
+            position: absolute;
+            left: 5.56%;
+            right: 5.56%;
+            top: 44.07%;
+            bottom: 34.46%;
+            width: 320px;
+            height: 38px;
+
+            background: #FFFFFF;
+            border: 1px solid #C585DB;
+            box-sizing: border-box;
+            border-radius: 10px;
+
+            filter: drop-shadow(0px 0px 10px rgba(197, 133, 219, 0.3));
+
+            color: #696974;
+        }
+
+        .register-google:active {
+            position: absolute;
+            left: 5.56%;
+            right: 5.56%;
+            top: 44.07%;
+            bottom: 34.46%;
+            width: 320px;
+            height: 38px;
+
+            background: #FFFFFF;
+            border: 1px solid #B15CCF;
+            box-sizing: border-box;
+            border-radius: 10px;
+
+            color: #696974;
+        }
+
+        .text-google {
+            font-family: Inter;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 12px;
+            line-height: 15px;
+            text-align: center;
+            margin-left: 11px;
+
+            flex: auto;
+            order: 1;
+            flex-grow: 0;
+        }
 
         .goto-login {
             position: absolute;
             left: 0%;
             right: 0%;
-            top: 30%;
+            top: 72.88%;
             bottom: 0%;
 
-            background: #white;
+            background: #FAFAFB;
 
             border-top-left-radius: 0px;
             border-top-right-radius: 0px;
@@ -527,13 +624,13 @@
         .goto-text {
             margin-block-start: 17px;
             margin-block-end: 17px;
-            margin-top: 25px;
+
             font-family: Roboto;
             font-style: normal;
             font-weight: 500;
             font-size: 12px;
             line-height: 14px;
-            color: #F6941E;
+            color: #B15CCF;
             text-align: center;
         }
 
@@ -547,7 +644,7 @@
             font-weight: 500;
             font-size: 12px;
             line-height: 14px;
-            color: #F6941E;
+            color: #B15CCF;
             text-align: center;
         }
 
@@ -560,7 +657,7 @@
             font-weight: 500;
             font-size: 12px;
             line-height: 14px;
-            color: #F6941E;
+            color: #B15CCF;
             text-align: center;
 
             text-decoration: underline;
@@ -575,7 +672,7 @@
             font-weight: 500;
             font-size: 12px;
             line-height: 14px;
-            color: #F6941E;
+            color: #B15CCF;
             text-align: center;
 
             font-weight: bold;
@@ -597,31 +694,30 @@
             height: 100%;
         }
 
-
     </style>
 </head>
 
-<body>
+<body style="background: #B15CCF;">
 <div class="reg-content">
     <div class="logo">
         <div class="discogr-logo">
-            <img src="/static/img/logo.svg" style="width:200px">
+            <img src="/static/img/icons/password/Logo.png">
         </div>
     </div>
     <div class="sign">
-        <form method="POST" action="/login" class="sign-form">
+        <form method="POST" action="/signup" class="sign-form">
             <div class="sign_up">
-                <p class="reg_title" style="margin-left: 20px; padding-bottom: 15px">Вход в личный кабинет</p>
+                <p class="reg_title">Регистрация учётной записи</p>
                 <div class="forms">
                     <div class="forms-in">
                         <div class="email-form">
                             <input class="email" name="email" type="email" placeholder="Эл. почта" required/>
                         </div>
-                        <!--    <div class="name-form">
-                                <input class="name" name="name" placeholder="Имя"/>
-                            </div> password-form-->
                         <div class="name-form">
-                            <input class="password" type="password" name="password" placeholder="Пароль" required/>
+                            <input class="name" name="name" placeholder="Имя" required/>
+                        </div>
+                        <div class="password-form">
+                            <input class="password" type="password" name="password" placeholder="Придумайте пароль" required/>
                             <object class="view-icon" type="image/svg+xml" data="view.svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
                                      viewBox="0 0 16 16">
@@ -631,14 +727,76 @@
                                 </svg>
                             </object>
                         </div>
+                        <div class="strength-pass">
+                            <div class="indicator-pass">
+                                <div class="very-low"></div>
+                                <div class="low"></div>
+                                <div class="middle"></div>
+                                <div class="high"></div>
+                                <div class="very-high"></div>
+                                <div class="pass-hint">Нет</div>
+                            </div>
+                        </div>
+                        <div class="agreement">Регистрируясь, вы подтверждаете, что принимаете
+                            <span class="agreement-link">Пользовательское соглашение.</span>
+                        </div>
                     </div>
                 </div>
                 <div class="reg-buttons">
-                    <button class="register">Войти</button>
-
+                    <button class="register">Зарегистрироваться</button>
+                    <p class="or">ИЛИ</p>
+                    <button class="register-google">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
+                             viewBox="0 0 16 16">
+                            <mask id="a" width="16" height="16" x="0" y="0" maskUnits="userSpaceOnUse"
+                                  style="mask-type:alpha">
+                                <path fill="#fff" fill-rule="evenodd"
+                                      d="M15.814 6.545H8.186v3.091h4.39c-.409 1.964-2.12 3.091-4.39 3.091-2.679 0-4.837-2.109-4.837-4.727 0-2.618 2.158-4.727 4.837-4.727A4.8 4.8 0 0111.2 4.327L13.581 2a8.258 8.258 0 00-5.395-2C3.646 0 0 3.564 0 8s3.647 8 8.186 8C12.28 16 16 13.09 16 8c0-.473-.074-.982-.186-1.455z"
+                                      clip-rule="evenodd"/>
+                            </mask>
+                            <g mask="url(#a)">
+                                <path fill="#FBBC05" d="M-.744 12.727V3.273L5.58 8l-6.325 4.727z"/>
+                            </g>
+                            <mask id="b" width="16" height="16" x="0" y="0" maskUnits="userSpaceOnUse"
+                                  style="mask-type:alpha">
+                                <path fill="#fff" fill-rule="evenodd"
+                                      d="M15.814 6.545H8.186v3.091h4.39c-.409 1.964-2.12 3.091-4.39 3.091-2.679 0-4.837-2.109-4.837-4.727 0-2.618 2.158-4.727 4.837-4.727A4.8 4.8 0 0111.2 4.327L13.581 2a8.258 8.258 0 00-5.395-2C3.646 0 0 3.564 0 8s3.647 8 8.186 8C12.28 16 16 13.09 16 8c0-.473-.074-.982-.186-1.455z"
+                                      clip-rule="evenodd"/>
+                            </mask>
+                            <g mask="url(#b)">
+                                <path fill="#EA4335"
+                                      d="M-.744 3.273L5.58 8l2.605-2.218 8.93-1.418V-.727H-.744v4z"/>
+                            </g>
+                            <g>
+                                <mask id="c" width="16" height="16" x="0" y="0" maskUnits="userSpaceOnUse"
+                                      style="mask-type:alpha">
+                                    <path fill="#fff" fill-rule="evenodd"
+                                          d="M15.814 6.545H8.186v3.091h4.39c-.409 1.964-2.12 3.091-4.39 3.091-2.679 0-4.837-2.109-4.837-4.727 0-2.618 2.158-4.727 4.837-4.727A4.8 4.8 0 0111.2 4.327L13.581 2a8.258 8.258 0 00-5.395-2C3.646 0 0 3.564 0 8s3.647 8 8.186 8C12.28 16 16 13.09 16 8c0-.473-.074-.982-.186-1.455z"
+                                          clip-rule="evenodd"/>
+                                </mask>
+                                <g mask="url(#c)">
+                                    <path fill="#34A853"
+                                          d="M-.744 12.727l11.163-8.363 2.94.363 3.757-5.454v17.454H-.744v-4z"/>
+                                </g>
+                            </g>
+                            <g>
+                                <mask id="d" width="16" height="16" x="0" y="0" maskUnits="userSpaceOnUse"
+                                      style="mask-type:alpha">
+                                    <path fill="#fff" fill-rule="evenodd"
+                                          d="M15.814 6.545H8.186v3.091h4.39c-.409 1.964-2.12 3.091-4.39 3.091-2.679 0-4.837-2.109-4.837-4.727 0-2.618 2.158-4.727 4.837-4.727A4.8 4.8 0 0111.2 4.327L13.581 2a8.258 8.258 0 00-5.395-2C3.646 0 0 3.564 0 8s3.647 8 8.186 8C12.28 16 16 13.09 16 8c0-.473-.074-.982-.186-1.455z"
+                                          clip-rule="evenodd"/>
+                                </mask>
+                                <g mask="url(#d)">
+                                    <path fill="#4285F4"
+                                          d="M17.116 16.727L5.581 8 4.093 6.91l13.023-3.637v13.454z"/>
+                                </g>
+                            </g>
+                        </svg>
+                        <span class="text-google">Продолжить с помощью Google</span>
+                    </button>
                     <div class="goto-login">
-                        <p class="goto-text">Забыли пароль? &ensp;<span class="login-status"><a
-                                class="link-status" href="/signup">Зарегистрироваться</a></span></p>
+                        <p class="goto-text">Уже есть учётная запись? <span class="login-status"><a
+                                class="link-status" href="/login">Войти</a></span></p>
                     </div>
                 </div>
             </div>
@@ -648,7 +806,7 @@
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         <div class="notification-is-danger">
-            {{ messages[0] }} <a href="{{ url_for('auth.signup') }}">&ensp;Зарегистрироваться?</a>
+        {{ messages[0] }} <a href="{{ url_for('auth.login') }}">&ensp;Войти?</a>
         </div>
         {% endif %}
         {% endwith %}
