--- a/sut/templates/course.html
+++ b/sut/templates/course.html
@@ -46,7 +46,7 @@
            <p style="color: grey; margin-right: 10px">Срок сдачи:</p> <p>{{ task[4] }}</p> <p style="margin-left: 30px">осталось дней:</p><p style="margin-left: 10px; color: #F6941E; font-weight:bold">{{task[5]}}</p>
            </div>
            <div style="display:flex;">
-           <p style="color: grey; margin-right: 10px">Макс. кол-во баллов:</p> <p> {{task[6]}} </p>
+           <p style="color: grey; margin-right: 10px">Количество баллов:</p> <p> {{task[6]}} </p>
            </div>
 
           {% if task[7] != () %}
