--- a/sut/templates/signup.html
+++ b/sut/templates/signup.html
@@ -17,7 +17,7 @@
     <style>
         html,
         body {
-            background: #B15CCF;
+            background: #F6941E;
         }
 
         .notification-is-danger {
@@ -47,7 +47,7 @@
             width: 100%;
             height: 100%;
 
-            background-color: #B15CCF;
+            background-color: #F6941E;
         }
 
 
@@ -71,9 +71,9 @@
 
         .sign_up {
             width: 360px;
-            height: 515px;
+            height: 400px;
             position: absolute;
-            top: 203px;
+            top: 180px;
             vertical-align: middle;
             margin-left: -0.35em;
 
@@ -86,7 +86,7 @@
             height: 22px;
             left: 5.56%;
             right: 5.56%;
-            top: calc(50% - 22px/2 - 216.5px);
+            top: calc(50% - 22px/2 - 160px);
 
             font-family: Inter;
             font-style: normal;
@@ -106,7 +106,7 @@
         div.forms {
             position: absolute;
             width: 360px;
-            height: 425px;
+            height: 250px;
             left: 0px;
             top: 89px;
         }
@@ -397,7 +397,7 @@
             height: 40px;
             left: 4.22%;
             right: 4.22%;
-            top: 175px;
+            top: 150px;
 
             font-family: Roboto;
             font-style: normal;
@@ -420,7 +420,7 @@
         }
 
         .agreement-link {
-            color: #B15CCF;
+            color: #F6941E;
         }
 
         .reg-buttons {
@@ -428,7 +428,7 @@
             width: 360px;
             height: 177px;
             left: 0px;
-            top: 337px;
+            top: 270px;
         }
 
         .register {
@@ -441,7 +441,7 @@
             height: 38px;
             outline: none !important;
 
-            background-color: #B15CCF;
+            background-color: #F6941E;
             color: white;
             padding: 11px 96px;
 
@@ -468,7 +468,7 @@
             height: 38px;
             outline: none !important;
 
-            background: #C585DB;
+            background: #F6941E;
             border-radius: 10px;
             color: white;
             padding: 11px 96px;
@@ -516,104 +516,17 @@
             filter: drop-shadow(0px 0px 10px rgba(177, 92, 207, 0.3));
         }
 
-        .or {
-            position: absolute;
-            height: 14px;
-            left: 46.39%;
-            right: 46.39%;
-            top: 40px;
 
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 12px;
-            line-height: 14px;
 
-            text-align: center;
-
-            color: #92929D;
-        }
-
-        .register-google {
-            position: absolute;
-            left: 5.56%;
-            right: 5.56%;
-            top: 44.07%;
-            bottom: 34.46%;
-            width: 320px;
-            height: 38px;
-            padding-left: 46px;
-
-            background: #FFFFFF;
-            border: 1px solid #F1F1F5;
-            box-sizing: border-box;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            align-content: center;
-
-            color: #696974;
-
-        }
-
-        .register-google:hover {
-            position: absolute;
-            left: 5.56%;
-            right: 5.56%;
-            top: 44.07%;
-            bottom: 34.46%;
-            width: 320px;
-            height: 38px;
-
-            background: #FFFFFF;
-            border: 1px solid #C585DB;
-            box-sizing: border-box;
-            border-radius: 10px;
-
-            filter: drop-shadow(0px 0px 10px rgba(197, 133, 219, 0.3));
-
-            color: #696974;
-        }
-
-        .register-google:active {
-            position: absolute;
-            left: 5.56%;
-            right: 5.56%;
-            top: 44.07%;
-            bottom: 34.46%;
-            width: 320px;
-            height: 38px;
-
-            background: #FFFFFF;
-            border: 1px solid #B15CCF;
-            box-sizing: border-box;
-            border-radius: 10px;
-
-            color: #696974;
-        }
-
-        .text-google {
-            font-family: Inter;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 12px;
-            line-height: 15px;
-            text-align: center;
-            margin-left: 11px;
-
-            flex: auto;
-            order: 1;
-            flex-grow: 0;
-        }
 
         .goto-login {
             position: absolute;
             left: 0%;
             right: 0%;
-            top: 72.88%;
+            top: 35.0%;
             bottom: 0%;
 
-            background: #FAFAFB;
+
 
             border-top-left-radius: 0px;
             border-top-right-radius: 0px;
@@ -630,7 +543,7 @@
             font-weight: 500;
             font-size: 12px;
             line-height: 14px;
-            color: #B15CCF;
+            color: #F6941E;
             text-align: center;
         }
 
@@ -644,7 +557,7 @@
             font-weight: 500;
             font-size: 12px;
             line-height: 14px;
-            color: #B15CCF;
+            color: #F6941E;
             text-align: center;
         }
 
@@ -657,7 +570,7 @@
             font-weight: 500;
             font-size: 12px;
             line-height: 14px;
-            color: #B15CCF;
+            color: #F6941E;
             text-align: center;
 
             text-decoration: underline;
@@ -672,7 +585,7 @@
             font-weight: 500;
             font-size: 12px;
             line-height: 14px;
-            color: #B15CCF;
+            color: #F6941E;
             text-align: center;
 
             font-weight: bold;
@@ -701,7 +614,7 @@
 <div class="reg-content">
     <div class="logo">
         <div class="discogr-logo">
-            <img src="/static/img/icons/password/Logo.png">
+            <img src="/static/img/logo.svg" style="width: 250px">
         </div>
     </div>
     <div class="sign">
@@ -727,73 +640,13 @@
                                 </svg>
                             </object>
                         </div>
-                        <div class="strength-pass">
-                            <div class="indicator-pass">
-                                <div class="very-low"></div>
-                                <div class="low"></div>
-                                <div class="middle"></div>
-                                <div class="high"></div>
-                                <div class="very-high"></div>
-                                <div class="pass-hint">Нет</div>
-                            </div>
-                        </div>
-                        <div class="agreement">Регистрируясь, вы подтверждаете, что принимаете
-                            <span class="agreement-link">Пользовательское соглашение.</span>
-                        </div>
+
+
                     </div>
                 </div>
                 <div class="reg-buttons">
                     <button class="register">Зарегистрироваться</button>
-                    <p class="or">ИЛИ</p>
-                    <button class="register-google">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"
-                             viewBox="0 0 16 16">
-                            <mask id="a" width="16" height="16" x="0" y="0" maskUnits="userSpaceOnUse"
-                                  style="mask-type:alpha">
-                                <path fill="#fff" fill-rule="evenodd"
-                                      d="M15.814 6.545H8.186v3.091h4.39c-.409 1.964-2.12 3.091-4.39 3.091-2.679 0-4.837-2.109-4.837-4.727 0-2.618 2.158-4.727 4.837-4.727A4.8 4.8 0 0111.2 4.327L13.581 2a8.258 8.258 0 00-5.395-2C3.646 0 0 3.564 0 8s3.647 8 8.186 8C12.28 16 16 13.09 16 8c0-.473-.074-.982-.186-1.455z"
-                                      clip-rule="evenodd"/>
-                            </mask>
-                            <g mask="url(#a)">
-                                <path fill="#FBBC05" d="M-.744 12.727V3.273L5.58 8l-6.325 4.727z"/>
-                            </g>
-                            <mask id="b" width="16" height="16" x="0" y="0" maskUnits="userSpaceOnUse"
-                                  style="mask-type:alpha">
-                                <path fill="#fff" fill-rule="evenodd"
-                                      d="M15.814 6.545H8.186v3.091h4.39c-.409 1.964-2.12 3.091-4.39 3.091-2.679 0-4.837-2.109-4.837-4.727 0-2.618 2.158-4.727 4.837-4.727A4.8 4.8 0 0111.2 4.327L13.581 2a8.258 8.258 0 00-5.395-2C3.646 0 0 3.564 0 8s3.647 8 8.186 8C12.28 16 16 13.09 16 8c0-.473-.074-.982-.186-1.455z"
-                                      clip-rule="evenodd"/>
-                            </mask>
-                            <g mask="url(#b)">
-                                <path fill="#EA4335"
-                                      d="M-.744 3.273L5.58 8l2.605-2.218 8.93-1.418V-.727H-.744v4z"/>
-                            </g>
-                            <g>
-                                <mask id="c" width="16" height="16" x="0" y="0" maskUnits="userSpaceOnUse"
-                                      style="mask-type:alpha">
-                                    <path fill="#fff" fill-rule="evenodd"
-                                          d="M15.814 6.545H8.186v3.091h4.39c-.409 1.964-2.12 3.091-4.39 3.091-2.679 0-4.837-2.109-4.837-4.727 0-2.618 2.158-4.727 4.837-4.727A4.8 4.8 0 0111.2 4.327L13.581 2a8.258 8.258 0 00-5.395-2C3.646 0 0 3.564 0 8s3.647 8 8.186 8C12.28 16 16 13.09 16 8c0-.473-.074-.982-.186-1.455z"
-                                          clip-rule="evenodd"/>
-                                </mask>
-                                <g mask="url(#c)">
-                                    <path fill="#34A853"
-                                          d="M-.744 12.727l11.163-8.363 2.94.363 3.757-5.454v17.454H-.744v-4z"/>
-                                </g>
-                            </g>
-                            <g>
-                                <mask id="d" width="16" height="16" x="0" y="0" maskUnits="userSpaceOnUse"
-                                      style="mask-type:alpha">
-                                    <path fill="#fff" fill-rule="evenodd"
-                                          d="M15.814 6.545H8.186v3.091h4.39c-.409 1.964-2.12 3.091-4.39 3.091-2.679 0-4.837-2.109-4.837-4.727 0-2.618 2.158-4.727 4.837-4.727A4.8 4.8 0 0111.2 4.327L13.581 2a8.258 8.258 0 00-5.395-2C3.646 0 0 3.564 0 8s3.647 8 8.186 8C12.28 16 16 13.09 16 8c0-.473-.074-.982-.186-1.455z"
-                                          clip-rule="evenodd"/>
-                                </mask>
-                                <g mask="url(#d)">
-                                    <path fill="#4285F4"
-                                          d="M17.116 16.727L5.581 8 4.093 6.91l13.023-3.637v13.454z"/>
-                                </g>
-                            </g>
-                        </svg>
-                        <span class="text-google">Продолжить с помощью Google</span>
-                    </button>
+
                     <div class="goto-login">
                         <p class="goto-text">Уже есть учётная запись? <span class="login-status"><a
                                 class="link-status" href="/login">Войти</a></span></p>
